ChangeLanguage state handler added